ddp-workspace/projects/study-builder-ui/src/antlr4-pex-grammar/PexParser.ts
// Generated from Pex.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PexListener } from "./PexListener";

export class PexParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly USER = 44;
	public static readonly OPERATOR = 45;
	public static readonly INSTANCE_TYPE = 46;
	public static readonly BOOL = 47;
	public static readonly STR = 48;
	public static readonly INT = 49;
	public static readonly TIMEUNIT = 50;
	public static readonly UNARY_OPERATOR = 51;
	public static readonly RELATION_OPERATOR = 52;
	public static readonly EQUALITY_OPERATOR = 53;
	public static readonly WS = 54;
	public static readonly UNRECOGNIZED = 55;
	public static readonly RULE_pex = 0;
	public static readonly RULE_expr = 1;
	public static readonly RULE_query = 2;
	public static readonly RULE_study = 3;
	public static readonly RULE_form = 4;
	public static readonly RULE_instance = 5;
	public static readonly RULE_question = 6;
	public static readonly RULE_child = 7;
	public static readonly RULE_userType = 8;
	public static readonly RULE_studyPredicate = 9;
	public static readonly RULE_formPredicate = 10;
	public static readonly RULE_formInstancePredicate = 11;
	public static readonly RULE_questionPredicate = 12;
	public static readonly RULE_predicate = 13;
	public static readonly RULE_profileDataQuery = 14;
	public static readonly RULE_kitEventQuery = 15;
	public static readonly RULE_testResultQuery = 16;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"pex", "expr", "query", "study", "form", "instance", "question", "child", 
		"userType", "studyPredicate", "formPredicate", "formInstancePredicate", 
		"questionPredicate", "predicate", "profileDataQuery", "kitEventQuery", 
		"testResultQuery",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'&&'", "'||'", "'('", "')'", "'.'", "'answers'", "'profile'", 
		"'event'", "'kit'", "'testResult'", "'studies'", "'['", "']'", "'forms'", 
		"'instances'", "'questions'", "'children'", "'hasAgedUp'", "'hasInvitation'", 
		"'isGovernedParticipant'", "'isEnrollmentStatus'", "'isStatus'", "','", 
		"'hasInstance'", "'snapshotSubstitution'", "'hasPreviousInstance'", "'isAnswered'", 
		"'numChildAnswers'", "'hasTrue'", "'hasFalse'", "'hasText'", "'hasOption'", 
		"'hasAnyOption'", "'hasOptionStartsWith'", "'hasDate'", "'ageAtLeast'", 
		"'value'", "'birthDate'", "'age'", "'language'", "'isReason'", "'isCorrected'", 
		"'isPositive'", "'user'", "'operator'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "USER", "OPERATOR", "INSTANCE_TYPE", "BOOL", "STR", 
		"INT", "TIMEUNIT", "UNARY_OPERATOR", "RELATION_OPERATOR", "EQUALITY_OPERATOR", 
		"WS", "UNRECOGNIZED",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PexParser._LITERAL_NAMES, PexParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PexParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Pex.g4"; }

	// @Override
	public get ruleNames(): string[] { return PexParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PexParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PexParser._ATN, this);
	}
	// @RuleVersion(0)
	public pex(): PexContext {
		let _localctx: PexContext = new PexContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PexParser.RULE_pex);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 34;
			this.expr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExprContext = new ExprContext(this._ctx, _parentState);
		let _prevctx: ExprContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, PexParser.RULE_expr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 47;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PexParser.BOOL:
				{
				_localctx = new BoolLiteralExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 37;
				this.match(PexParser.BOOL);
				}
				break;
			case PexParser.INT:
				{
				_localctx = new IntLiteralExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 38;
				this.match(PexParser.INT);
				}
				break;
			case PexParser.STR:
				{
				_localctx = new StrLiteralExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 39;
				this.match(PexParser.STR);
				}
				break;
			case PexParser.USER:
			case PexParser.OPERATOR:
				{
				_localctx = new QueryExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 40;
				this.query();
				}
				break;
			case PexParser.UNARY_OPERATOR:
				{
				_localctx = new UnaryExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 41;
				this.match(PexParser.UNARY_OPERATOR);
				this.state = 42;
				this.expr(6);
				}
				break;
			case PexParser.T__2:
				{
				_localctx = new GroupExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 43;
				this.match(PexParser.T__2);
				this.state = 44;
				this.expr(0);
				this.state = 45;
				this.match(PexParser.T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 63;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 61;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
					case 1:
						{
						_localctx = new CompareExprContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PexParser.RULE_expr);
						this.state = 49;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 50;
						this.match(PexParser.RELATION_OPERATOR);
						this.state = 51;
						this.expr(6);
						}
						break;

					case 2:
						{
						_localctx = new EqualityExprContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PexParser.RULE_expr);
						this.state = 52;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 53;
						this.match(PexParser.EQUALITY_OPERATOR);
						this.state = 54;
						this.expr(5);
						}
						break;

					case 3:
						{
						_localctx = new AndExprContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PexParser.RULE_expr);
						this.state = 55;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 56;
						this.match(PexParser.T__0);
						this.state = 57;
						this.expr(4);
						}
						break;

					case 4:
						{
						_localctx = new OrExprContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, PexParser.RULE_expr);
						this.state = 58;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 59;
						this.match(PexParser.T__1);
						this.state = 60;
						this.expr(3);
						}
						break;
					}
					}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public query(): QueryContext {
		let _localctx: QueryContext = new QueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PexParser.RULE_query);
		try {
			this.state = 178;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				_localctx = new StudyQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 66;
				this.userType();
				this.state = 67;
				this.match(PexParser.T__4);
				this.state = 68;
				this.study();
				this.state = 69;
				this.match(PexParser.T__4);
				this.state = 70;
				this.studyPredicate();
				}
				break;

			case 2:
				_localctx = new FormQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 72;
				this.userType();
				this.state = 73;
				this.match(PexParser.T__4);
				this.state = 74;
				this.study();
				this.state = 75;
				this.match(PexParser.T__4);
				this.state = 76;
				this.form();
				this.state = 77;
				this.match(PexParser.T__4);
				this.state = 78;
				this.formPredicate();
				}
				break;

			case 3:
				_localctx = new FormInstanceQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 80;
				this.userType();
				this.state = 81;
				this.match(PexParser.T__4);
				this.state = 82;
				this.study();
				this.state = 83;
				this.match(PexParser.T__4);
				this.state = 84;
				this.form();
				this.state = 85;
				this.match(PexParser.T__4);
				this.state = 86;
				this.instance();
				this.state = 87;
				this.match(PexParser.T__4);
				this.state = 88;
				this.formInstancePredicate();
				}
				break;

			case 4:
				_localctx = new QuestionQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 90;
				this.userType();
				this.state = 91;
				this.match(PexParser.T__4);
				this.state = 92;
				this.study();
				this.state = 93;
				this.match(PexParser.T__4);
				this.state = 94;
				this.form();
				this.state = 95;
				this.match(PexParser.T__4);
				this.state = 96;
				this.question();
				this.state = 97;
				this.match(PexParser.T__4);
				this.state = 98;
				this.questionPredicate();
				}
				break;

			case 5:
				_localctx = new DefaultLatestAnswerQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 100;
				this.userType();
				this.state = 101;
				this.match(PexParser.T__4);
				this.state = 102;
				this.study();
				this.state = 103;
				this.match(PexParser.T__4);
				this.state = 104;
				this.form();
				this.state = 105;
				this.match(PexParser.T__4);
				this.state = 106;
				this.question();
				this.state = 107;
				this.match(PexParser.T__4);
				this.state = 108;
				this.match(PexParser.T__5);
				this.state = 109;
				this.match(PexParser.T__4);
				this.state = 110;
				this.predicate();
				}
				break;

			case 6:
				_localctx = new DefaultLatestChildAnswerQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 112;
				this.userType();
				this.state = 113;
				this.match(PexParser.T__4);
				this.state = 114;
				this.study();
				this.state = 115;
				this.match(PexParser.T__4);
				this.state = 116;
				this.form();
				this.state = 117;
				this.match(PexParser.T__4);
				this.state = 118;
				this.question();
				this.state = 119;
				this.match(PexParser.T__4);
				this.state = 120;
				this.child();
				this.state = 121;
				this.match(PexParser.T__4);
				this.state = 122;
				this.match(PexParser.T__5);
				this.state = 123;
				this.match(PexParser.T__4);
				this.state = 124;
				this.predicate();
				}
				break;

			case 7:
				_localctx = new AnswerQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 126;
				this.userType();
				this.state = 127;
				this.match(PexParser.T__4);
				this.state = 128;
				this.study();
				this.state = 129;
				this.match(PexParser.T__4);
				this.state = 130;
				this.form();
				this.state = 131;
				this.match(PexParser.T__4);
				this.state = 132;
				this.instance();
				this.state = 133;
				this.match(PexParser.T__4);
				this.state = 134;
				this.question();
				this.state = 135;
				this.match(PexParser.T__4);
				this.state = 136;
				this.match(PexParser.T__5);
				this.state = 137;
				this.match(PexParser.T__4);
				this.state = 138;
				this.predicate();
				}
				break;

			case 8:
				_localctx = new ChildAnswerQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 140;
				this.userType();
				this.state = 141;
				this.match(PexParser.T__4);
				this.state = 142;
				this.study();
				this.state = 143;
				this.match(PexParser.T__4);
				this.state = 144;
				this.form();
				this.state = 145;
				this.match(PexParser.T__4);
				this.state = 146;
				this.instance();
				this.state = 147;
				this.match(PexParser.T__4);
				this.state = 148;
				this.question();
				this.state = 149;
				this.match(PexParser.T__4);
				this.state = 150;
				this.child();
				this.state = 151;
				this.match(PexParser.T__4);
				this.state = 152;
				this.match(PexParser.T__5);
				this.state = 153;
				this.match(PexParser.T__4);
				this.state = 154;
				this.predicate();
				}
				break;

			case 9:
				_localctx = new ProfileQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 156;
				this.userType();
				this.state = 157;
				this.match(PexParser.T__4);
				this.state = 158;
				this.match(PexParser.T__6);
				this.state = 159;
				this.match(PexParser.T__4);
				this.state = 160;
				this.profileDataQuery();
				}
				break;

			case 10:
				_localctx = new EventKitQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 162;
				this.userType();
				this.state = 163;
				this.match(PexParser.T__4);
				this.state = 164;
				this.match(PexParser.T__7);
				this.state = 165;
				this.match(PexParser.T__4);
				this.state = 166;
				this.match(PexParser.T__8);
				this.state = 167;
				this.match(PexParser.T__4);
				this.state = 168;
				this.kitEventQuery();
				}
				break;

			case 11:
				_localctx = new EventTestResultQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 170;
				this.userType();
				this.state = 171;
				this.match(PexParser.T__4);
				this.state = 172;
				this.match(PexParser.T__7);
				this.state = 173;
				this.match(PexParser.T__4);
				this.state = 174;
				this.match(PexParser.T__9);
				this.state = 175;
				this.match(PexParser.T__4);
				this.state = 176;
				this.testResultQuery();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public study(): StudyContext {
		let _localctx: StudyContext = new StudyContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PexParser.RULE_study);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.match(PexParser.T__10);
			this.state = 181;
			this.match(PexParser.T__11);
			this.state = 182;
			this.match(PexParser.STR);
			this.state = 183;
			this.match(PexParser.T__12);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public form(): FormContext {
		let _localctx: FormContext = new FormContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PexParser.RULE_form);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 185;
			this.match(PexParser.T__13);
			this.state = 186;
			this.match(PexParser.T__11);
			this.state = 187;
			this.match(PexParser.STR);
			this.state = 188;
			this.match(PexParser.T__12);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instance(): InstanceContext {
		let _localctx: InstanceContext = new InstanceContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PexParser.RULE_instance);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 190;
			this.match(PexParser.T__14);
			this.state = 191;
			this.match(PexParser.T__11);
			this.state = 192;
			this.match(PexParser.INSTANCE_TYPE);
			this.state = 193;
			this.match(PexParser.T__12);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public question(): QuestionContext {
		let _localctx: QuestionContext = new QuestionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PexParser.RULE_question);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 195;
			this.match(PexParser.T__15);
			this.state = 196;
			this.match(PexParser.T__11);
			this.state = 197;
			this.match(PexParser.STR);
			this.state = 198;
			this.match(PexParser.T__12);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public child(): ChildContext {
		let _localctx: ChildContext = new ChildContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PexParser.RULE_child);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(PexParser.T__16);
			this.state = 201;
			this.match(PexParser.T__11);
			this.state = 202;
			this.match(PexParser.STR);
			this.state = 203;
			this.match(PexParser.T__12);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public userType(): UserTypeContext {
		let _localctx: UserTypeContext = new UserTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, PexParser.RULE_userType);
		try {
			this.state = 207;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PexParser.USER:
				_localctx = new UserContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 205;
				this.match(PexParser.USER);
				}
				break;
			case PexParser.OPERATOR:
				_localctx = new OperatorContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 206;
				this.match(PexParser.OPERATOR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public studyPredicate(): StudyPredicateContext {
		let _localctx: StudyPredicateContext = new StudyPredicateContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, PexParser.RULE_studyPredicate);
		try {
			this.state = 223;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PexParser.T__17:
				_localctx = new HasAgedUpPredicateContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 209;
				this.match(PexParser.T__17);
				this.state = 210;
				this.match(PexParser.T__2);
				this.state = 211;
				this.match(PexParser.T__3);
				}
				break;
			case PexParser.T__18:
				_localctx = new HasInvitationPredicateContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 212;
				this.match(PexParser.T__18);
				this.state = 213;
				this.match(PexParser.T__2);
				this.state = 214;
				this.match(PexParser.STR);
				this.state = 215;
				this.match(PexParser.T__3);
				}
				break;
			case PexParser.T__19:
				_localctx = new IsGovernedParticipantQueryContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 216;
				this.match(PexParser.T__19);
				this.state = 217;
				this.match(PexParser.T__2);
				this.state = 218;
				this.match(PexParser.T__3);
				}
				break;
			case PexParser.T__20:
				_localctx = new IsEnrollmentStatusPredicateContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 219;
				this.match(PexParser.T__20);
				this.state = 220;
				this.match(PexParser.T__2);
				this.state = 221;
				this.match(PexParser.STR);
				this.state = 222;
				this.match(PexParser.T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public formPredicate(): FormPredicateContext {
		let _localctx: FormPredicateContext = new FormPredicateContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, PexParser.RULE_formPredicate);
		let _la: number;
		try {
			this.state = 239;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PexParser.T__21:
				_localctx = new IsStatusPredicateContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 225;
				this.match(PexParser.T__21);
				this.state = 226;
				this.match(PexParser.T__2);
				this.state = 227;
				this.match(PexParser.STR);
				this.state = 232;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === PexParser.T__22) {
					{
					{
					this.state = 228;
					this.match(PexParser.T__22);
					this.state = 229;
					this.match(PexParser.STR);
					}
					}
					this.state = 234;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 235;
				this.match(PexParser.T__3);
				}
				break;
			case PexParser.T__23:
				_localctx = new HasInstancePredicateContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 236;
				this.match(PexParser.T__23);
				this.state = 237;
				this.match(PexParser.T__2);
				this.state = 238;
				this.match(PexParser.T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
